fix spacing

--- a/projects/edebidle/style.css
+++ b/projects/edebidle/style.css
@@ -35,7 +35,7 @@ small {
 .app {
   display: grid;
   height: 100vh;
-  grid-template-rows: auto auto 1fr auto;
+  grid-template-rows: auto auto auto auto;
   gap: 1rem;
   padding: 1rem;
   /* padding-top: 0; */
@@ -73,7 +73,7 @@ small {
   background: #cc4;
 }
 .feedback {
-  white-space: pre-wrap;
+  /* white-space: pre-wrap; */
 }
 
 .keyboard {
